# MX-FFmpeg

./: .gitignore  CHANGELOG.md  README.md
ffmpeg/JNI/: build-openssl.sh  config-ffmpeg.sh
ffmpeg/JNI/ffmpeg/: CMakeLists.txt  config.h
ffmpeg/JNI/ffmpeg/ffbuild/: config.fate  config.mak
ffmpeg/JNI/ffmpeg/tests/ref/fate/: sub-jacosub  sub-mpsub-frames
ffmpeg/JNI/speex-1.2rc1/: .gitignore
ffmpeg/JNI/zvbi/: Makefile  config.status
ffmpeg/JNI/zvbi/contrib/: Makefile
ffmpeg/JNI/zvbi/daemon/: Makefile
ffmpeg/JNI/zvbi/doc/: Makefile
ffmpeg/JNI/zvbi/examples/: Makefile
ffmpeg/JNI/zvbi/m4/: Makefile
ffmpeg/JNI/zvbi/po/: Makefile  Makefile.in
jni/: config-ffmpeg.sh  rebuild-ffmpeg-open-source.sh  rebuild-ffmpeg.sh  rmignore.sh
jni/dav1d/: .gitignore
jni/ffmpeg/: config.h
jni/ffmpeg/doc/: config.texi
jni/ffmpeg/libavcodec/: allcodecs.c  codec_list.c  libavcodec.pc
jni/ffmpeg/libavfilter/: libavfilter.pc  libavfilter.so.7
jni/ffmpeg/libavformat/: Makefile  demuxer_list.c  downloadhttp.c  ijkutils.c  libavformat.pc  libavformat.so.58  mxddec.c  mxv.c  mxv.h  mxvdecoder.c  mxvencoder.c  utils.c
jni/ffmpeg/libavutil/: ffversion.h  libavutil.pc  libavutil.so.56
jni/ffmpeg/libswresample/: libswresample.pc  libswresample.so.3
jni/ffmpeg/libswscale/: libswscale.pc  libswscale.so.5
jni/libsmb2/: Makefile  config.status  libtool
jni/libsmb2/examples/: Makefile
jni/libsmb2/include/: Makefile
jni/libsmb2/lib/: Makefile
jni/openssl-1.0.2s/: .gitignore  Makefile.bak
jni/openssl-1.0.2s/crypto/: buildinf.h
jni/speex-1.2rc1/: .gitignore
(+13 files in other folders)
